--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2025.4.26
 charset-normalizer==3.4.2
 distro==1.9.0
 Django==5.2.1
+django-jet-reboot==1.3.10
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
